Add "Get Programming with Clojure" to the books list
The book is in early preview. 5 out 14 Units are already published. 
The 5 units cover the basics of the language, form S-expression syntax to function definition and instructions to launch a Clojure program from the command line. 
I believe the early preview version of the book is valuable for Clojure beginners.

--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
+| image::https://blog.klipse.tech/assets/get_programming_clojure_small.jpg[Get Programming with Clojure,link="https://www.getprogrammingwithclojure.com"]
+| https://www.getprogrammingwithclojure.com[Get Programming with Clojure] +
+by Yehonathan Sharvit +
+May 25, 2019
+
 | image::https://images-na.ssl-images-amazon.com/images/I/51UNlhb3nmL._SL160.jpg[Hands-On Reactive Programming with Clojure,link="http://amzn.com/B07N7525GX"]
 | http://amzn.com/B07N7525GX[Reactive Programming with Clojure] +
 by Konrad Szydlo, Leonardo Borges +
