--- a/content/dev/contributors.adoc
+++ b/content/dev/contributors.adoc
@@ -1,13 +1,13 @@
 = Contributors
 Rich Hickey
 2016-02-25
-:type: community
+:type: dev
 :toc: macro
 :icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-Below is a list of all signers of the Clojure Contributor Agreement. For more info, see <<contributing#,how to contribute>>.
+Below is a list of all signers of the Clojure Contributor Agreement. For more info, see <<dev#,how to contribute>>.
 
 == _Signed Contributor Agreement:_
 
