--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -31,7 +31,7 @@ Official:
 
 Community:
 
-* <<xref/../../community/books#,Books>>
+* <<books#,Books>>
 * http://www.braveclojure.com/[Clojure for the Brave and True] - a beginner book by Daniel Higginbotham
 * http://aphyr.com/posts/301-clojure-from-the-ground-up-welcome[Clojure from the ground up] - a series of intro articles by Kyle Kingsbury
 * https://github.com/ClojureBridge/curriculum[ClojureBridge Curriculum]
