Training: Add Klipse Technologies

--- a/content/community/training.adoc
+++ b/content/community/training.adoc
@@ -25,6 +25,7 @@ helpdesk@starweaver.com
 | Peter Taoussanis | Europe | Enterprise Clojure | https://www.taoensso.com | ptaoussanis@taoensso.com
 | Adam Bard | North America | Clojure Training | http://clojuretraining.ca | learnclojure@adambard.com
 | Mark Engelberg | North America (west coast) | Customized Training | https://www.linkedin.com/in/mark-engelberg-0a09a88a/ | mark.engelberg@gmail.com
+| Klipse Technologies| Worldwide | Clojure Training | https://www.getprogrammingwithclojure.com/workshop | viebel@gmail.com
 |===
 
 
