--- a/content/dev/contributors.adoc
+++ b/content/dev/contributors.adoc
@@ -7,7 +7,7 @@ Rich Hickey
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-Below is a list of all signers of the Clojure Contributor Agreement. For more info, see <<dev#,how to contribute>>.
+Below is a list of all signers of the Clojure <<contributor_agreement#,Contributor Agreement>>.
 
 == _Signed Contributor Agreement:_
 
