--- a/README.adoc
+++ b/README.adoc
@@ -36,7 +36,7 @@ Retrieve and install the current theme assets (these don't change very often so 
 
 Generate the pages:
 
-. `jbake` - this will create the static site in the output directory
+. `jbake -b` - this will create the static site in the output directory
 . Run `jbake -s` to serve these pages at http://localhost:8820/index
 
 ## Terms of Use
